Added a function to write the networks weights and biases to a file so that they don't have to be reloaded every time.

--- a/toyNN.xcodeproj/xcshareddata/xcschemes/toyNN.xcscheme
+++ b/toyNN.xcodeproj/xcshareddata/xcschemes/toyNN.xcscheme
@@ -35,7 +35,8 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
-      useCustomWorkingDirectory = "NO"
+      useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "/Users/jeffreyfisher/Documents/Projects/toyNN/savedNeuralNetworks"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
